# GLCM-OpenCV

./: CMakeLists.txt  README - 中文.md  README.md
src/: glcm.cpp  glcm.h  main.cpp  main.cpp~
